--- a/School/views/guardian.xml
+++ b/School/views/guardian.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record model="ir.ui.view" id="guardian_student_kanban">
+        <field name="name">guardian.student.Kanban</field>
+        <field name="model">guardian.student</field>
+        <field name="arch" type="xml">
+            <kanban class="o_modules_kanban">
+                <field name="first_name" />
+                <field name="last_name"/>
+                <field name="qualification" />
+                <field name="gender"/>
+                            <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_module_vignette">
+                            <div class="oe_kanban_content flex-grow-1">
+                                <div class="o_kanban_record_title oe_kanban_details">
+                                    <strong>
+                                        <field name="first_name"/>
+                                    </strong>
+                                </div>
+                                <div class="o_kanban_record_subtitle">
+                                    <field name="last_name"/>
+                                    <field name="qualification"/>
+                                </div>
+                                <div>
+                                    <field name="gender"/>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
     <record id="view_guardian_student_search" model="ir.ui.view">
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
@@ -70,7 +104,7 @@
     <record model="ir.actions.act_window" id="action_guardian_list">
         <field name="name">Guardian</field>
         <field name="res_model">guardian.student</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
