--- a/School/views/student.xml
+++ b/School/views/student.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
+    <record model="ir.ui.view" id="admission_student_kanban">
+        <field name="name">admission.student.Kanban</field>
+        <field name="model">admission.student</field>
+        <field name="arch" type="xml">
+            <kanban class="o_modules_kanban">
+                <field name="name"/>
+                <field name="last_name"/>
+                <field name="gender"/>
+                <field name="city"/>
+             <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_module_vignette">
+                            <div class="oe_kanban_content flex-grow-1">
+                                <div class="o_kanban_record_title oe_kanban_details">
+                                    <strong>
+                                        <field name="name"/>
+                                    </strong>
+                                </div>
+                                <div class="o_kanban_record_subtitle">
+                                    <field name="last_name"/>
+                                    <field name="gender"/>
+                                </div>
+                                <div>
+                                    <field name="city"/>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 
     <record id="view_admission_student_search" model="ir.ui.view">
         <field name="model">admission.student</field>
@@ -84,7 +115,7 @@
     <record model="ir.actions.act_window" id="action_school_admission">
         <field name="name">Admission Form</field>
         <field name="res_model">admission.student</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
