--- a/School/views/sale_order_view.xml
+++ b/School/views/sale_order_view.xml
@@ -8,6 +8,23 @@
             <field name="payment_term_id" position="after">
                 <field name="teacher_id"/>
             </field>
+
+            <xpath expr="//form/sheet/group/group[@name='order_details']/field[@name='validity_date']" position="before">
+                <field name="teacher_id"/>
+            </xpath>
+
+            <xpath expr="//page[@name='other_information']/group/group[@name='sales_person']" position="inside">
+                <field name="teacher_id"/>
+            </xpath>
+
+            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
+                <field name="line_teacher_id"/>
+            </xpath>
+
+            <xpath expr="//field[@name='order_line']/form/group/group/field[@name='price_unit']" position="after">
+                <field name="line_teacher_id"/>
+            </xpath>
         </field>
     </record>
 </odoo>
+
