--- a/School/views/student_list.xml
+++ b/School/views/student_list.xml
@@ -81,13 +81,10 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <div class="oe_title">
-                        <h1>
-                            <field name="name" readonly="1"/>
-                        </h1>
-                    </div>
                     <group>
                         <group>
+                            <field name="name"/>
+
                             <field name="first_name"/>
                             <field name="last_name"/>
                             <field name="standard"/>
@@ -97,6 +94,7 @@
                             <field name="gender"/>
                             <field name="teacher_id"/>
                             <field name="qualification"/>
+                            <!--                            <field name="average_ids"/>-->
                             <button name="action_test" string="Save" type="object" class="oe_highlight"/>
                             <button name="%(School.action_school_list)d" string="Action Save" type="action"
                                     class="oe_highlight"/>
