--- a/school/views/average_grade.xml
+++ b/school/views/average_grade.xml
@@ -29,6 +29,7 @@
                             <field name="hindi"/>
                             <field name="gujarati"/>
                             <field name="maths"/>
+                            <field name="result"/>
                         </group>
                     </group>
                 </sheet>
