--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -6,7 +6,6 @@
         <field name="arch" type="xml">
             <kanban class="o_modules_kanban">
                 <field name="name"/>
-                <field name="last_name"/>
                 <field name="gender"/>
                 <field name="city"/>
              <templates>
@@ -19,7 +18,6 @@
                                     </strong>
                                 </div>
                                 <div class="o_kanban_record_subtitle">
-                                    <field name="last_name"/>
                                     <field name="gender"/>
                                 </div>
                                 <div>
@@ -38,7 +36,6 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name"/>
-                <field name="last_name"/>
                 <field name="gender"/>
                 <field name="city"/>
             </search>
@@ -48,20 +45,13 @@
     <record id="view_admission_student_tree" model="ir.ui.view">
         <field name="model">admission.student</field>
         <field name="arch" type="xml">
-            <tree editable="bottom">
+            <tree>
                 <field name="name"/>
-                <field name="last_name"/>
-                <field name="father_name"/>
-                <field name="mother_name"/>
-                <field name="age"/>
-                <field name="city"/>
-                <field name="last_standard"/>
-                <field name="current_standard"/>
-                <field name="date_of_birth"/>
-                <field name="address"/>
-                <field name="gender"/>
-                <field name="contact"/>
-
+                <field name="std"/>
+                <field name="academic_year"/>
+                <field name="admission_date"/>
+                <field name="second_language"/>
+                <field name="medium"/>
             </tree>
         </field>
     </record>
@@ -73,43 +63,28 @@
                 <sheet>
                     <div class="oe_title">
                         <h1>
-                            <field name="name" readonly="1"/>
+                            <field name="heading" readonly="1"/>
                         </h1>
                     </div>
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="last_name"/>
-                            <field name="father_name"/>
+                            <field name="academic_year"/>
+                            <field name="admission_date"/>
                         </group>
                         <group>
-                            <field name="mother_name"/>
-                            <field name="age"/>
-                            <field name="city"/>
+                            <field name="std"/>
+                            <field name="second_language"/>
+                            <field name="medium"/>
                         </group>
                     </group>
                          <notebook>
-                        <page string="Student IDS">
-                            <field name="student_ids">
-                                <form string="School">
-                                    <group>
-                                        <group>
-                                            <field name="first_name"/>
-                                            <field name="last_name"/>
-                                        </group>
-                                        <group>
-                                            <field name="gender"/>
-                                        </group>
-                                    </group>
-                                </form>
-                            </field>
-                        </page>
                              <page string="Personal Information">
                             <group>
                                 <group>
-                                    <field name="last_standard"/>
-                                    <field name="current_standard"/>
                                     <field name="date_of_birth"/>
+                                    <field name="age"/>
+                                    <field name="city"/>
                                 </group>
                                 <group>
                                     <field name="address"/>
