--- a/school/views/guardian_staff.xml
+++ b/school/views/guardian_staff.xml
@@ -6,21 +6,18 @@
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
             <kanban class="o_modules_kanban">
-                <field name="first_name" />
-                <field name="last_name"/>
-                <field name="qualification" />
+                <field name="qualification"/>
                 <field name="gender"/>
-                            <templates>
+                <templates>
                     <t t-name="kanban-box">
                         <div class="oe_module_vignette">
                             <div class="oe_kanban_content flex-grow-1">
                                 <div class="o_kanban_record_title oe_kanban_details">
                                     <strong>
-                                        <field name="first_name"/>
+                                        <field name="name"/>
                                     </strong>
                                 </div>
                                 <div class="o_kanban_record_subtitle">
-                                    <field name="last_name"/>
                                     <field name="qualification"/>
                                 </div>
                                 <div>
@@ -39,8 +36,6 @@
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
             <search>
-                <field name="first_name"/>
-                <field name="last_name"/>
                 <field name="qualification"/>
                 <field name="gender"/>
             </search>
@@ -51,8 +46,6 @@
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="first_name"/>
-                <field name="last_name"/>
                 <field name="dob"/>
                 <field name="qualification"/>
                 <field name="gender"/>
@@ -68,32 +61,42 @@
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
             <form>
-                <sheet><div class="oe_title">
+                <sheet>
+                    <div class="oe_title">
                         <h1>
-                            <field name="name" readonly="1"/>
+                            <field name="heading" readonly="1"/>
                         </h1>
                     </div>
 
                     <group>
                         <group>
-                            <field name="first_name"/>
-                            <field name="last_name"/>
-                            <field name="dob"/>
-                            <field name="age"/>
                             <field name="name"/>
+                            <field name="dob"/>
                             <field name="qualification"/>
                         </group>
                         <group>
-                            <field name="gender"/>
-                            <field name="address"/>
-                            <field name="city"/>
-                            <field name="contact"/>
-                            <field name="guardian_ids"/>
+                            <field name="age"/>
+                            <field name="work"/>
+
+                            <!--                            <field name="guardian_ids"/>-->
                         </group>
                     </group>
-                     <notebook>
+                    <notebook>
                         <page string="Guardian IDS">
-                                    <field name="guardian_ids"/>
+                            <field name="guardian_ids"/>
+                        </page>
+                        <page string="Personal Information">
+                            <group>
+                                <group>
+                                    <field name="address"/>
+                                    <field name="gender"/>
+                                    <field name="qualification"/>
+                                </group>
+                                <group>
+                                    <field name="city"/>
+                                    <field name="contact"/>
+                                </group>
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
