--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -8,7 +8,7 @@
                 <field name="name"/>
                 <field name="gender"/>
                 <field name="city"/>
-             <templates>
+                <templates>
                     <t t-name="kanban-box">
                         <div class="oe_module_vignette">
                             <div class="oe_kanban_content flex-grow-1">
@@ -60,10 +60,21 @@
         <field name="model">admission.student</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done"/>
+                    <button name="action_approve_admission" id="action_admission_approve" string="Approve Admission"
+                            type="object"/>
+                    <button name="action_cancel_admission" id="action_admission_cancel" string="Cancel" type="object"/>
+                    <button name="%(school.action_admission_cancel)d" string="Admission Cancel" type="action"/>
+
+                </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
                             <field name="heading" readonly="1"/>
+                            <h2>
+                                <field name="priority" widget="priority" class="mr-3"/>
+                            </h2>
                         </h1>
                     </div>
                     <group>
@@ -78,8 +89,8 @@
                             <field name="medium"/>
                         </group>
                     </group>
-                         <notebook>
-                             <page string="Personal Information">
+                    <notebook>
+                        <page string="Personal Information">
                             <group>
                                 <group>
                                     <field name="date_of_birth"/>
