--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -61,7 +61,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done" options="{'clickable': True}"/>
                     <button name="action_approve_admission" id="action_admission_approve" string="Approve Admission"
                             type="object"/>
                     <button name="action_cancel_admission" id="action_admission_cancel" string="Cancel" type="object"/>
